// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration action creators savePassword should attempt to save the password in the keychain 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Entropy",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators startRegistration should initiate the registration process 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "PasswordEntry",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators submitEntropy should correctly navigate to route and provide the entropy 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Loading",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Encrypting and storing data locally",
  },
]
`;
